# MiniMicro2

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md
docs/: ARCHITECTURE.md  BUILDING.md  CPP_STL.md  NEW_FEATURES.md
include/: Console.h  Display.h  Machine.h  ResourcePath.h  ScreenFont.h  SolidColorDisplay.h  TextDisplay.h
resources/shaders/: screenfont.fs
src/: Console.cpp  Display.cpp  Machine.cpp  ResourcePath.cpp  ScreenFont.cpp  SolidColorDisplay.cpp  TextDisplay.cpp  main.cpp
